# ark_aigc_demo-main

./: .eslintrc  .gitignore  .npmrc  .prettierrc  .stylelintrc  LEARNING_ROADMAP.md  LICENSE  README.md  craco.config.js  fix_crlf.js  fix_crlf.ps1  message.js  package-lock.json  package.json  tsconfig.json
Server/: README.md  app.js  nodemon.json  package-lock.json  package.json  token.js  util.js
Server/scenes/: Custom.json
public/: index.html  robots.txt
rag_llm_server/: config.py  database.py  main.py  pyproject.toml  requirements.txt
rag_llm_server/services/: __init__.py  llm_service.py  rag_service.py  token_build.py  utils.py
server_python/: .python-version  main.py  pyproject.toml  requirements.txt  token_builder.py  utils.py
src/: App.tsx  config.ts  index.less  index.module.less  index.tsx  interface.ts  react-app-env.d.ts  theme.less
src/app/: api.ts  base.ts  index.ts  type.ts
src/components/AIAvatarLoading/: index.module.less  index.tsx
src/components/AiAvatarCard/: index.module.less  index.tsx
src/components/AiChangeCard/: index.module.less  index.tsx
src/components/AiChangeCard/CheckScene/: index.module.less  index.tsx
src/components/DrawerRowItem/: index.module.less  index.tsx
src/components/FullScreenCard/: index.module.less  index.tsx
src/components/Header/: index.module.less  index.tsx
src/components/Loading/AudioLoading/: index.module.less  index.tsx
src/components/Loading/HorizonLoading/: index.module.less  index.tsx
src/components/Loading/VerticalLoading/: index.module.less  index.tsx
src/components/LocalPlayerSet/: index.module.less  index.tsx
src/components/NetworkIndicator/: index.module.less  index.tsx
src/components/ResizeWrapper/: index.module.less  index.tsx
src/components/UserTag/: index.module.less  index.tsx
src/config/: index.ts
src/lib/: RtcClient.ts  listenerHooks.ts  useCommon.ts  useCommon.tsx
src/pages/MainPage/: index.module.less  index.tsx
src/pages/MainPage/MainArea/: index.module.less  index.tsx
src/pages/MainPage/MainArea/Antechamber/: index.module.less  index.tsx
src/pages/MainPage/MainArea/Room/: AudioController.tsx  CameraArea.tsx  Conversation.tsx  ToolBar.tsx  index.module.less  index.tsx
src/pages/MainPage/Menu/: index.module.less  index.tsx
src/pages/Mobile/MobileToolBar/: index.module.less  index.tsx
src/pages/Mobile/SettingsDrawer/: index.module.less  index.tsx
src/pages/Mobile/components/SettingsItem/: index.module.less  index.tsx
src/store/: index.ts
src/store/slices/: device.ts  room.ts
src/utils/: handler.ts  logger.ts  utils.less  utils.ts
(+9 files in other folders)
