# =============================================================
# Python 项目配置文件：定义项目元数据和依赖
# =============================================================
#
# 【泛化描述】pyproject.toml 是 Python 3.11+ 的标准项目配置文件（PEP 621）。
#             定义了 server_python 项目的名称、版本、依赖等。
#
# 【典型场景】
#   uv sync               → 根据 pyproject.toml 安装依赖
#   python -m server     → 运行项目

[project]
name = "server-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.115.0",                        # Web 框架
    "httpx==0.27.2",                          # 异步 HTTP 客户端
    "pydantic==2.9.2",                        # 数据模型与校验
    "python-dotenv==1.0.1",                   # 环境变量管理
    "uvicorn[standard]==0.32.0",              # ASGI 服务器
    "volcengine-python-sdk[ark]>=5.0.3",      # 火山引擎 ARK SDK
]
